--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -192,7 +192,10 @@
             operations.
           </p>
         </div>
-
+        <div
+          class="rightBlank w-[200px] h-[5px]"
+          style="background: linear-gradient(to bottom, #00aa00, #539afd);"
+        ></div>
         <div class="flex-1">
           <h3 class="font-semibold text-lg mb-2">High-Frequency Message Bus</h3>
           <p class="text-sm leading-relaxed">
