--- a/layouts/contactus/list.html
+++ b/layouts/contactus/list.html
@@ -43,7 +43,7 @@
     <!-- Heading -->
     <div class="text-center">
       <h1
-        class="text-5xl font-bold tracking-wide bg-gradient-to-r from-white via-cyan-300 to-white text-transparent bg-clip-text drop-shadow-lg"
+        class="text-5xl font-bold tracking-wide bg-gradient-to-r from-white via-green-300 to-white text-transparent bg-clip-text drop-shadow-lg"
       >
         Get in Touch with Algoteq
       </h1>
