--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -90,7 +90,7 @@
 
     <!-- Content -->
     <div
-      class="relative z-10 text-white mt-20"
+      class="relative z-10 text-white mt-20 max-sm:mt-0"
       x-data="{ shown: false }"
       x-intersect="shown = true"
     >
@@ -100,14 +100,14 @@
         x-intersect="shown = true"
       >
         <div
-          class="flex flex-wrap gap-96 justify-around text-left mt-[10rem] max-sm:mt-10 pl-20 max-sm:p-6"
+          class="flex flex-wrap gap-96 max-sm:gap-5 justify-start mt-[10rem] max-sm:mt-5 pl-20 max-sm:pl-5 max-sm:p-6"
           x-show="shown"
           x-transition:enter="transition ease-out duration-1000 delay-50"
           x-transition:enter-start="opacity-0 -translate-x-20"
           x-transition:enter-end="opacity-100 translate-x-0"
         >
           <div>
-            <h2 class="font-normal text-[70px] max-sm:text-[30px]">
+            <h2 class="text-[70px] max-sm:text-[30px]">
               Advanced<br />Trading<br />Solutions
             </h2>
           </div>
